# esp-studio

./: .gitignore  Makefile  esp-studio-configuration.yml  go.mod  go.sum
.github/workflows/: esp-studio-desktop-build.yml
cmd/esp-studio-desktop/: Makefile  app.go  esp-studio-desktop-configuration.yml  main.go  wails.json
cmd/esp-studio-embed/: .gitignore  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.old
cmd/esp-studio-embed/main/: CMakeLists.txt  ble-nimble.c  ble-old.txt  config.c  database.c  embed-spiff.c  fireback.c  fireback.h  gpio_builtin_tools.c  gpio_tools.c  index.c  main.c  memory-monitor.c  nvs.c  str_builder.c  uuid.c  uuid.h  wifi.c
cmd/esp-studio-embed/main/iot/: GpioCJson.dyno.c  GpioCJson.dyno.h  GpioCSQL.dyno.h  GpioDefinitions.dyno.h  GpioHttp.dyno.c  GpioModeActions.dyno.h  GpioModeCJson.dyno.c  GpioModeCSQL.dyno.h  GpioModeSeederSQLite.dyno.sql  GpioSeederSQLite.dyno.h  GpioStateActions.dyno.h  GpioStateDefinitions.dyno.h  GpioStateHttp.dyno.c  GpioStateHttp.dyno.h  MemoryStatCJson.dyno.c  MemoryStatCJson.dyno.h  MemoryStatCSQL.dyno.h  MemoryStatDefinitions.dyno.h  MemoryStatHttp.dyno.c  MemoryStatHttp.dyno.h
cmd/esp-studio-server/: Makefile  main.go  package.bat  package.json  winrar-config.txt
modules/iot/: AverageNodeActivity.go  BackgroundOperation.go  BasicTimerActionHandler.go  ContainerLevelNodeActivity.go  ControlSheetActionRun.go  ControlSheetActions.go  ControlSheetCli.go  ControlSheetEntity.dyno.go  ControlSheetHttp.go  (+170 more)
ui/: Makefile  esp-studio-clean.sh  index.cordova.txt  package.json
(+2161 files in other folders)
